--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: 蒋林莲dalao的博客 | jll Blog
+SEOTitle: 蒋林莲dalao的博客 | little Blog
 header-img: img/post-bg-desk.jpg
 email: L_inkkkk1414@163.com
 description: "fail,fail,forget howmany times i failed,anyway,i will suceed."
