--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: simple Blog
+title: a Blog FOR  L
 SEOTitle: 蒋林莲dalao的博客 | little Blog
 header-img: #img/post-bg-desk.jpg
 email: L_inkkkk1414@163.com
