--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-respo/limg.jpg # Site settings
+# Site settings
 title: a Blog FOR  L
 SEOTitle: 蒋林莲dalao的博客 | little Blog
-header-img:respo/limg.jpg 
+header-img:
 email: L_inkkkk1414@163.com
 description: "fail,fail,forget howmany times i failed,anyway,i will suceed."
 keyword: "BY, BY Blog, 林莲的博客, linlianjiang, 蒋林莲, iOS, Apple, iPhone"
