--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: a Blog FOR  L
 SEOTitle: 蒋林莲dalao的博客 | little Blog
-header-img: img/post-bg-test.jpg
+header-img: img/post-bg-1.jpg
 email: L_inkkkk1414@163.com
 description: "fail,fail,forget howmany times i failed,anyway,i will suceed."
 keyword: "BY, BY Blog, 林莲的博客, linlianjiang, 蒋林莲, iOS, Apple, iPhone"
