--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ sidebar-avatar:    # use absolute URL, seeing it's used in both `/` and `/about/
 # SNS settings
 RSS: false
 # weibo_username:   none
-zhihu_username:     secret
+zhihu_username:     
 github_username:    linlianjiang
 facebook_username:  林四
-jianshu_username:   浪子不悔
+jianshu_username:   "http://www.jianshu.com/u/76c07094eae2"
 #twitter_username:   none
 
 
