--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     
 github_username:    linlianjiang
 facebook_username:  林四
-jianshu_username:   "http://www.jianshu.com/u/76c07094eae2"
+jianshu_username:   76c07094eae2
 #twitter_username:   none
 
 
