--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar:    # use absolute URL, seeing it's used in both `/` and `/about/
 # SNS settings
 RSS: false
 # weibo_username:   none
-zhihu_username:     
+zhihu_username:     ni-shi-lang-zi-bie-bo-an-53-77 
 github_username:    linlianjiang
 facebook_username:  林四
 jianshu_username:   76c07094eae2
