--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: a Blog FOR  L
 SEOTitle: 蒋林莲dalao的博客 | little Blog
 header-img: img/2017-09-16 (3) 1.jpg
-email: L_inkkkk1414@163.com
+email: 1078957802@163.com
 description: "Every failure is leading towards success."
 keyword: "seco, a Blog FOR L, 蒋林莲, linlian, 蒋林莲dalao的博客"
 url: "http://linlianjiang.github.io"          # your host, for absolute URL
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     nishilangzibieboan
 github_username:    linlianjiang
 facebook_username:  林四
-jianshu_username:   
+jianshu_username:   76c07094eae2
 #twitter_username:   
 
 
