--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/linlianjiang/linlianjiang.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "I will be scuccessful."
 sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -56,7 +56,7 @@ kramdown:
 
 # 评论系统
 # Disqus settings（https://disqus.com/）
-disqus_username: 
+disqus_username: linlianjiang
 
 # 多说 将于2017年6月1日正式关停服务，建议使用 Disqus（http://dev.duoshuo.com/threads/58d1169ae293b89a20c57241）
 # Duoshuo settings
