--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ github_repo: "https://github.com/linlianjiang/linlianjiang.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "I will be scuccessful."
-sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "I'm sorry that the truth is  i am the boss."
+sidebar-avatar:  /img/avatar_m.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
