--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 蒋林莲dalao的博客 | little Blog
 header-img: img/2017-09-16 (3) 1.jpg
 email: L_inkkkk1414@163.com
 description: "Every failure is leading towards success."
-keyword: "seco, a Blog FOR L, 蒋林莲, linlian, 蒋林莲dalao的博客"
+keyword: "seco, a Blog FOR L, 蒋林莲, linlian,jll, 蒋林莲dalao的博客"
 url: "http://linlianjiang.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/linlianjiang/linlianjiang.github.io.git" # you code repository
