--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: a Blog FOR  L
-SEOTitle: 蒋林莲dalao的博客 | little Blog
+SEOTitle: L | a Blog
 header-img: img/2017-09-16 (3) 1.jpg
 email: L_inkkkk1414@163.com
 description: "Every failure is leading towards success."
